app.yaml
apiVersion: v1
kind: Service
metadata:
  name: meshdemo-ingress
  namespace: meshdemons_version
  labels:
    app: meshdemons_version
    service: ingress
spec:
  ports:
    - port: 80
      targetPort: 3000
      name: http
  selector:
    app: home
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: home
  namespace: meshdemons_version
  labels:
    app: home
    service: home
spec:
  ports:
    - port: 3000
      name: http
  selector:
    app: home
---
apiVersion: v1
kind: Service
metadata:
  name: home-v1
  namespace: meshdemons_version
  labels:
    app: home
    service: home
spec:
  ports:
    - port: 3000
      name: http
  selector:
    app: home
---
apiVersion: v1
kind: Service
metadata:
  name: home-v2
  namespace: meshdemons_version
  labels:
    app: home
    service: home
spec:
  ports:
    - port: 3000
      name: http
  selector:
    app: home
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-v1
  namespace: meshdemons_version
  labels:
    app: home
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: home
      version: v1
  template:
    metadata:
      namespace: meshdemons_version
      labels:
        app: home
        version: v1
    spec:
      serviceAccountName: meshdemo-home
      containers:
        - name: home
          image: ams.ocir.io/frsxwtjslf35/meshdemo-homesvc:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          securityContext:
            runAsUser: 1000
      imagePullSecrets: 
      - name: amsocirsecret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-v2
  namespace: meshdemons_version
  labels:
    app: home
    version: v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: home
      version: v2
  template:
    metadata:
      namespace: meshdemons_version
      labels:
        app: home
        version: v2
    spec:
      serviceAccountName: meshdemo-home
      containers:
        - name: home
          image: ams.ocir.io/frsxwtjslf35/meshdemo-homesvc:2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          securityContext:
            runAsUser: 1000
      imagePullSecrets: 
      - name: amsocirsecret
---
